# firecore-data

./: Cargo.toml
configuration/: Cargo.toml
configuration/examples/: load.rs
configuration/src/: lib.rs
examples/: load.rs
player/: Cargo.toml
player/src/: lib.rs  list.rs
src/: configuration.rs  data.rs  error.rs  lib.rs  reload.rs
src/configuration/: mod.rs
src/data/: configuration.rs  saves.rs
storage/: Cargo.toml
storage/src/: lib.rs
