[package]
name = "firecore-data"
version = "0.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
ron = "0.6"

directories-next = "2.0"
miniquad-cookie = { git = "https://github.com/DoNotDoughnut/miniquad-cookie" }

ahash = { version = "0.7", features = ["serde"] }

lazy_static = "1.4"

async-trait = "0.1"

firecore-input = { git = "https://github.com/DoNotDoughnut/firecore-input" }
macroquad = { git = "https://github.com/not-fl3/macroquad" }