[package]
name = "firecore-data"
version = "0.3.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

### Specifications

firecore-data-lib = { git = "https://github.com/DoNotDoughnut/firecore-data-lib" }
#firecore-data-lib = { path = "../firecore-data-lib" }

firecore-input = { git = "https://github.com/DoNotDoughnut/firecore-input" }
#firecore-input = { path = "../firecore-input" }

### Serialization

serde = { version = "1.0", features = ["derive"] }
ron = "0.6"

### File management

directories-next = "2.0"
miniquad-cookie = { git = "https://github.com/DoNotDoughnut/miniquad-cookie" }

### Game engine used for loading files

macroquad = { git = "https://github.com/DoNotDoughnut/macroquad" }

### Other

ahash = { version = "0.7", features = ["serde"] }

#lazy_static = "1.4"

async-trait = "0.1"