[package]
name = "firecore-saves"
version = "0.4.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["firecore-data"]

[dependencies]

### Specifications

firecore-data = { path = "../", optional = true }

firecore-util = { git = "https://github.com/DoNotDoughnut/firecore-util", features = ["hash", "tinystr"] }
# firecore-util = { path = "../firecore-util", default-features = false, features = ["hash"] }

firecore-pokedex-lib = { git = "https://github.com/DoNotDoughnut/firecore-pokedex", package = "firecore-pokedex-lib" }
# firecore-pokedex-lib = { path = "../firecore-pokedex/lib" }

serde = { version = "1.0", features = ["derive"] }