[package]
name = "firecore-storage"
version = "0.4.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
firecore-data = { path = "../" }
firecore-saves = { path = "../player" }
firecore-configuration = { path = "../configuration" }